Phase5/negative_tests/prog13.dlp
//Should return boolean but returns integer

bool myFunction() {
    return 5;
}

int main() {
    myFunction();
    return 0;
}